django crud funct. with class based view

--- a/django-bootcamp/hofvidz-project/halls/templates/halls/dashboard.html
+++ b/django-bootcamp/hofvidz-project/halls/templates/halls/dashboard.html
@@ -2,6 +2,6 @@
 
 {% block content %}
 <div class="container">
-    This is the Home page {{ user.username }}
+    Dashboard
 </div>
 {% endblock %}
