--- a/django-bootcamp/hofvidz-project/halls/templates/halls/detail_hall.html
+++ b/django-bootcamp/hofvidz-project/halls/templates/halls/detail_hall.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 <div class="container">
-    This is the Home page {{ user.username }}
+    <h1>{{ hall.title }}</h1>
+    <h4 class="text-muted">{{ hall.user.username }}</h4>
 </div>
 {% endblock %}
