--- a/django-bootcamp/hofvidz-project/halls/templates/halls/create_hall.html
+++ b/django-bootcamp/hofvidz-project/halls/templates/halls/create_hall.html
@@ -2,11 +2,11 @@
 
 {% block content %}
 <div class="container">
-    <h2>Sign Up</h2>
+    <h2>Create Hall of Fame</h2>
     <form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="btn btn-primary">Sign Up</button>
+        <input type="submit" value="Create Hall" class="btn btn-primary">
     </form>
 </div>
 {% endblock %}
