--- a/django-bootcamp/hofvidz-project/halls/templates/registration/login.html
+++ b/django-bootcamp/hofvidz-project/halls/templates/registration/login.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
     <h2>Login</h2>
-    <form method="POST" action="{% url 'home' %}">
+    <form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="btn btn-primary">Login</button>
