--- a/django-bootcamp/youtube/codingEntrepreneurs/templates/forms.html
+++ b/django-bootcamp/youtube/codingEntrepreneurs/templates/forms.html
@@ -4,7 +4,12 @@
 
 <form action="." method="post">
     {% csrf_token %}
-    <input type="text" name="title" id="">
+
+    <!-- <input type="text" name="title" id=""> -->
+
+
+    {{ form.as_p }}
+
     <button type="submit">Send data</button>
 </form>
 
